gking site: tightened spacing and changed titles on software page https://redmine.hmdc.harvard.edu/issues/1007

--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -53,7 +53,7 @@ h3, h4 {
 
 h3 {
   color: #6e7a7a;
-  margin-top: 10px;
+  margin-top:0px;
   }
 
 .node-teaser.node-type-scholar-software-project h3 {
@@ -130,6 +130,10 @@ h2.title,
 .block h3.title {
   font-size: 1.3em;
   }
+  
+ .node-type-scholar_software_project h3.title {
+ 	font-size: 1.2em;
+ 	}
 
 #content .node h3.title {
   border: none;
